Minister fixes for the US factions

--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -192,20 +192,20 @@ CAL_land_of_immigrant:0 "Land of Immigrants"
 CAL_californian_nationalism:0 "Pacifican Nationalism"
 
 ### Parties ###
-CAL_totalist_party:0 "PCP"
-CAL_totalist_party_long:0 "Pacific Communist Party"
+CAL_totalist_party:0 "CPS"
+CAL_totalist_party_long:0 "Combined Pacific Syndicates"
 CAL_radical_socialist_party:0 "CPS"
 CAL_radical_socialist_party_long:0 "Combined Pacific Syndicates"
 CAL_syndicalist_party:0 "CPS"
 CAL_syndicalist_party_long:0 "Combined Pacific Syndicates"
-CAL_social_democrat_party:0 "PDP"
-CAL_social_democrat_party_long:0 "Pacific Democratic Party"
-CAL_social_liberal_party:0 "PDP"
-CAL_social_liberal_party_long:0 "Pacific Democratic Party"
-CAL_market_liberal_party:0 "PPP"
-CAL_market_liberal_party_long:0 "Pacific Progressive Party"
-CAL_social_conservative_party:0 "CRP"
-CAL_social_conservative_party_long:0 "Pacific Republican Party"
+CAL_social_democrat_party:0 "Social Democratic Party"
+CAL_social_democrat_party_long:0 "Pacific Social Democratic Party"
+CAL_social_liberal_party:0 "Progressive Party"
+CAL_social_liberal_party_long:0 "Pacific Progressive Party"
+CAL_market_liberal_party:0 "Republican Party"
+CAL_market_liberal_party_long:0 "Pacific Republican Party"
+CAL_social_conservative_party:0 "Ursine Party"
+CAL_social_conservative_party_long:0 "Ursine Party of the Pacific"
 CAL_authoritarian_democrat_party:0 "Military Junta"
 CAL_authoritarian_democrat_party_long:0 "Military Junta"
 CAL_paternal_autocrat_party:0 "PFP"
@@ -250,10 +250,6 @@ cal_guaranted:0 "They Guaranteed the PSA"
 CAL_friendship:0 "Pacific States Friendship"
 
 ### Events ###
-pacificstates.1.t:0 "To Lead the PSA"
-pacificstates.1.d:0 "With chaos engulfing the United states our young state stands at a crossroads. We have to make a decision about the future government of the Pacific States of America."
-pacificstates.1.a:0 "Put our faith and trust in a military government"
-pacificstates.1.b:0 "A civilian administration is best."
 pacificstates.2.t:0 "The Capital"
 pacificstates.2.d:0 "Sacremento has been the Capital of the West Coast Federation since our founding. It seems Sacremento isn't as accommodating for a Capital as we thought and it may be time to choose another city to be the seat of the Federation."
 pacificstates.2.a:0 "The Capital stays in Sacramento!"
@@ -286,31 +282,6 @@ pacificstates.9.a:0 "The Pacific dollar"
 pacificstates.11.t:0 "Industrial Resources"
 pacificstates.11.d:0 "The industrial barons of the PSA have amassed these resources to be used by the government."
 pacificstates.11.a:0 "Excellent"
-pacificstates.11.t:0 "The Pacific States of America Election"
-pacificstates.11.d:0 "The newly independent state was to have its first election. Three parties were represented in the election. The Pacific Democratic Party, The California Republican Party, and The Pacific Progressive Party. The California Republicans were considered the favourites but the Pacific Democrats were influential outside of California and it was assumed that the Progressives would cut into the Republican vote."
-pacificstates.11.a:0 "The Pacific Democrats"
-pacificstates.11.b:0 "The California Republicans"
-pacificstates.11.c:0 "The Pacific Progressive Party"
-pacificstates.12.t:0 "The Pacific States of America Election"
-pacificstates.12.d:0 "The Congress elected in the first free election after the declaration of independence has drawn to a close. Various political parties have already begun their campaigns. But currently only three parties have a chance of gaining majority and thus forming a new government. Which one shall prevail?"
-pacificstates.12.a:0 "The Pacific Democrats"
-pacificstates.12.b:0 "The California Republicans"
-pacificstates.12.c:0 "The Pacific Progressive Party"
-pacificstates.13.t:0 "The Pacific States of America Election"
-pacificstates.13.d:0 "The Congress elected in the second free election after the declaration of independence has drawn to a close. Various political parties have already begun their campaigns. But currently only three parties have a chance of gaining a majority and thus forming a new government. Which one shall prevail?"
-pacificstates.13.a:0 "The Pacific Democrats"
-pacificstates.13.b:0 "The California Republicans"
-pacificstates.13.c:0 "The Pacific Progressive Party"
-pacificstates.14.t:0 "The Pacific States of America Election"
-pacificstates.14.d:0 "The Congress elected in the third free election after the declaration of independence has drawn to a close. Various political parties have already begun their campaigns. But currently only three parties have a chance of gaining majority and thus forming a new government. Which one shall prevail?"
-pacificstates.14.a:0 "The Pacific Democrats"
-pacificstates.14.b:0 "The California Republicans"
-pacificstates.14.c:0 "The Pacific Progressive Party"
-pacificstates.15.t:0 "The Pacific States of America Election"
-pacificstates.15.d:0 "The Congress elected in the fourth free election after the declaration of independence has drawn to a close. Various political parties have already begun their campaigns. But currently only three parties have chance of gaining a majority and thus forming a new government. Which one shall prevail?"
-pacificstates.15.a:0 "The Pacific Democrats"
-pacificstates.15.b:0 "The California Republicans"
-pacificstates.15.c:0 "The Pacific Progressive Party"
 pacificstates.16.t:0 "One of our ministers has died"
 pacificstates.16.d:0 "Our nation mourns as one of our ministers passed away. Even now, our nation and the minister's office have to move onward. A new minister has to be put in office."
 pacificstates.16.a:0 "OK"
@@ -479,3 +450,31 @@ pacificstates.55.a:0 "How humiliating !"
 pacificstates.56.t:0 "PSA refused to sign peace treaty!"
 pacificstates.56.d:0 "The Pacific States refused our generous peace offer and renewed military actions..."
 pacificstates.56.a:0 "They will pay for this..."
+
+pacificstates.100.t:0 "First Election of the Pacific States"
+pacificstates.100.d:0 "The first election of the Pacific States is now upon us and four parties have formed out of the old political parties when we part of the United States. There is the Social conservatives in the Ursine Party and lead by Henry Arnold. The republican party has managed to stick around and has nominated the Brilliant but eccentric billionaire Howard Hughes to lead them. While the Progressives have nominated Clarence D. Martin to lead. Finally there is Upton Sinclair and the Social Democratic Party. With four running, whom shall win the presidency of the PSA?"
+pacificstates.100.a:0 "Upton Sinclair and the Social Democratic Party"
+pacificstates.100.b:0 "Clarence D. Martin and the Progressive Party"
+pacificstates.100.c:0 "Howard Hughes and the Republican Party"
+pacificstates.100.e:0 "Henry Arnold and the Ursine Party"
+
+pacificstates.101.t:0 "Second Election of the Pacific States"
+pacificstates.101.d:0 "The Second election of the Pacific States is now upon us and it is time for the People of the Pacific States to choose whom shall be the President of the Pacific States."
+pacificstates.101.a:0 "Upton Sinclair and the Social Democratic Party"
+pacificstates.101.b:0 "Clarence D. Martin and the Progressive Party"
+pacificstates.101.c:0 "Howard Hughes and the Republican Party"
+pacificstates.101.e:0 "Henry Arnold and the Ursine Party"
+
+pacificstates.102.t:0 "Third Election of the Pacific States"
+pacificstates.102.d:0 "The Third election of the Pacific States is now upon us and it is time for the People of the Pacific States to choose whom shall be the President of the Pacific States."
+pacificstates.102.a:0 "Upton Sinclair and the Social Democratic Party"
+pacificstates.102.b:0 "Clarence D. Martin and the Progressive Party"
+pacificstates.102.c:0 "Howard Hughes and the Republican Party"
+pacificstates.102.e:0 "Henry Arnold and the Ursine Party"
+
+pacificstates.103.t:0 "Fourth Election of the Pacific States"
+pacificstates.103.d:0 "The Fourth election of the Pacific States is now upon us and it is time for the People of the Pacific States to choose whom shall be the President of the Pacific States."
+pacificstates.103.a:0 "Upton Sinclair and the Social Democratic Party"
+pacificstates.103.b:0 "Clarence D. Martin and the Progressive Party"
+pacificstates.103.c:0 "Howard Hughes and the Republican Party"
+pacificstates.103.e:0 "Henry Arnold and the Ursine Party"
