some Spain work

--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -61,6 +61,7 @@ CAR_advisors_italianfed:0 "Italian Assistance"
 CAR_begin_plot:0 "Enact the plan to kill the Crown Prince... this could take some time to complete.\n"
 CAR_won_civil_war:0 "Won the civil war in Spain\n"
 CAR_remove_cores_SPR:0 "Remove all core states of [SPR.GetNameDef]\n"
+CAR_remove_cores_CAR:0 "Remove all core states of [CAR.GetNameDef]\n"
 CAR_remove_cores_CNT:0 "Remove all core states of [CNT.GetNameDef]\n"
 
 ### Parties ###
