--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -87,6 +87,10 @@ SPR_workers_rise:0 "Mine and road workers rise up to support the cause!\n"
 SPR_foreign_unit_arrives:0 "Foreign-trained unit arrives in Barcelona\n"
 SPR_supplied_unit_arrives:0 "Supplied militia unit arrives in Burgos\n"
 SPR_become_republic:0 "Name changed to §YThe Spanish Republic§!\n"
+SPR_no_civil_war:0 "The Spanish Civil War has not begun\n"
+SPR_civil_war_happened:0 "The Spanish Civil War has begun\n"
+SPR_civil_war_over:0 "The Spanish Civil War is over\n"
+SPR_won_election:0 "Has won in a fair national election\n"
 
 ### Focuses ###
 SPR_strengthen_kingdom:0 "Strengthen the Kingdom"
