added focus tree for SPR

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -30,15 +30,19 @@ SPR_social_breakdown_2:0 "Fractured Society"
 SPR_social_breakdown_3:0 "Fractured Society"
 SPR_diplomacy_focus:0 "Diplomacy Focus"
 SPR_economy_focus:0 "Economy Focus"
+SPR_economy_focus_2:0 "Economy Focus"
+SPR_economy_focus_3:0 "Economy Focus"
 SPR_military_focus:0 "Military Focus"
 SPR_new_jobs:0 "Jobs for the People"
 SPR_rally_kingdom:0 "Rally the Kingdom!"
 SPR_new_command:0 "A New Command"
 SPR_propaganda_focus:0 "Radio Madrid"
 SPR_army_production:0 "Spanish Army Production"
+SPR_army_production_2:0 "Spanish Army Production"
 SPR_vitorio_factory:0 "Vitorio Air Factory"
 SPR_air_focus:0 "Rule the Skies"
 SPR_navy_focus:0 "Rule the Seas"
+SPR_splendid_isolation:0 "Splendid Isolation"
 SPR_portuguese_economic_cooperation:0 "Economic Cooperation with Portugal"
 SPR_italian_economic_cooperation:0 "Economic Cooperation with Italian Federation"
 SPR_advisors_natfrance:0 "French Assistance"
@@ -91,6 +95,7 @@ SPR_no_civil_war:0 "The Spanish Civil War has not begun\n"
 SPR_civil_war_happened:0 "The Spanish Civil War has begun\n"
 SPR_civil_war_over:0 "The Spanish Civil War is over\n"
 SPR_won_election:0 "Has won in a fair national election\n"
+SPR_alfonso_in_coma:0 "King Alfonso is in a coma\n"
 
 ### Focuses ###
 SPR_strengthen_kingdom:0 "Strengthen the Kingdom"
@@ -352,6 +357,19 @@ sprd.29.d.cnt:0 "Today marked a startling result in the Spanish elections, held 
 sprd.29.d.car:0 "Today marked a startling result in the Spanish elections, held amid much violence and protest. The Falange Española, supporters of the Carlist dynasty, proved victorious by a wide margin, paving the way for Infante Javier de Borbón-Parma to take the place of the comatose Alfonso XIII as the ruling King of Spain. While leftist parties initially contested the results, so far it appears as if the Carlist win is legitimate and Javier's coronation is scheduled to take place within the week. The new government will have many challenges ahead in restoring order, but it seems as if a Spanish civil war has been narrowly averted."
 sprd.29.a:0 "Peace rules in Spain!"
 sprd.29.b:0 "I see..."
+
+sprd.30.t:0 "[From.GetNameDef] wants to join Mitteleuropa"
+sprd.30.d:0 "[From.GetNameDef] has annouced recently that it wishes to join Mitteleuropa. How shall we respond?"
+sprd.30.a:0 "Absolutely, they are welcome"
+sprd.30.b:0 "It's not a good idea"
+sprd.31.t:0 "[From.GetNameDef] wants to join the Entente"
+sprd.31.d:0 "[From.GetNameDef] has annouced recently that it wishes to join the Entente. How shall we respond?"
+sprd.32.t:0 "[From.GetName] Agrees"
+sprd.32.d:0 "[From.GetNameDef] has agreed that [Root.GetNameDef] will be a useful addition to their faction. An alliance between the two nations has now been created."
+sprd.32.a:0 "We have thrown our lot in with theirs..."
+sprd.33.t:0 "[From.GetName] Refuses"
+sprd.33.d:0 "Diplomats from [From.GetNameDef] have refused any offers of alliance or requests for the protection of [Root.GetAdjective] independence. We are on our own."
+sprd.33.a:0 "So be it"
 
 ### Post-War ###
 
