Finally clean up all the work I did on South Africa

--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -255,10 +255,12 @@ SAF_PARAMOUNT_CHIEFS:0 "Has granted extended power to the Paramount Chiefs"
 SAF_WORK_PROGRAMS:0 "Has focused economic recovery on work programs for the unemployed"
 SAF_INDUSTRIALIZE:0 "Has focused economic recovery on rapid industrialisation"
 SAF_LIBERALIZE:0 "Has focused economic recovery on liberalisation and trade with the Entente"
-SAF_BLACK_MONDAY_CLEARED:0 "Has resolved the Black Monday crisis"
+SAF_BLACK_MONDAY_FLAG:0 "The Black Monday crisis has hit South Africa."
 SAF_1938_ELECTIONS:0 "The 1938 Elections have taken place"
 SAF_NAT_WIN:0 "The Nationalists won the 1938 General Election"
 SAF_DOM_WIN:0 "The Dominionists won the 1938 General Election"
+SAF_NAT_SACW_WON:0 "The Nationalists won the Civil War"
+SAF_DOM_SACW_WON:0 "The Dominionists won the Civil War"
 SAF_CALM_RETURNS:0 "Our country is stable enough to pass major reforms"
 
 ### Misc ###
