Major work on SACW. Should be 99 % done. Rest to do is world news event and post-CW focuses

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1895,6 +1895,74 @@ MAD_DRAV_totalist:0 "Dravidian Commune"
 MAD_DRAV_totalist_ADJ:0 "Dravidian"
 MAD_DRAV_totalist_DEF:0 "The Dravidian Commune"
 
+ZIM_RHO_authoritarian_democrat:0 "Rhodesia"
+ZIM_RHO_authoritarian_democrat_ADJ:0 "Rhodesian"
+ZIM_RHO_authoritarian_democrat_DEF:0 "Rhodesia"
+ZIM_RHO_market_liberal:0 "Rhodesia"
+ZIM_RHO_market_liberal_ADJ:0 "Rhodesian"
+ZIM_RHO_market_liberal_DEF:0 "Rhodesia"
+ZIM_RHO_national_populist:0 "Rhodesia"
+ZIM_RHO_national_populist_ADJ:0 "Rhodesian"
+ZIM_RHO_national_populist_DEF:0 "Rhodesia"
+ZIM_RHO_paternal_autocrat:0 "Rhodesia"
+ZIM_RHO_paternal_autocrat_ADJ:0 "Rhodesian"
+ZIM_RHO_paternal_autocrat_DEF:0 "Rhodesia"
+ZIM_RHO_radical_socialist:0 "Rhodesia"
+ZIM_RHO_radical_socialist_ADJ:0 "Rhodesian"
+ZIM_RHO_radical_socialist_DEF:0 "Rhodesia"
+ZIM_RHO_social_conservative:0 "Rhodesia"
+ZIM_RHO_social_conservative_ADJ:0 "Rhodesian"
+ZIM_RHO_social_conservative_DEF:0 "Rhodesia"
+ZIM_RHO_social_democrat:0 "Rhodesia"
+ZIM_RHO_social_democrat_ADJ:0 "Rhodesian"
+ZIM_RHO_social_democrat_DEF:0 "Rhodesia"
+ZIM_RHO_social_liberal:0 "Rhodesia"
+ZIM_RHO_social_liberal_ADJ:0 "Rhodesian"
+ZIM_RHO_social_liberal_DEF:0 "Rhodesia"
+ZIM_RHO_radical_socialist:0 "Rhodesian Commune"
+ZIM_RHO_radical_socialist_ADJ:0 "Rhodesian"
+ZIM_RHO_radical_socialist_DEF:0 "The Rhodesian Commune"
+ZIM_RHO_syndicalist:0 "Rhodesian Commune"
+ZIM_RHO_syndicalist_ADJ:0 "Rhodesian"
+ZIM_RHO_syndicalist_DEF:0 "The Rhodesian Commune"
+ZIM_RHO_totalist:0 "Rhodesian Commune"
+ZIM_RHO_totalist_ADJ:0 "Rhodesian"
+ZIM_RHO_totalist_DEF:0 "The Rhodesian Commune"
+
+ZIM_RHO_ENG_authoritarian_democrat:0 "South Rhodesia"
+ZIM_RHO_ENG_authoritarian_democrat_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_authoritarian_democrat_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_market_liberal:0 "South Rhodesia"
+ZIM_RHO_ENG_market_liberal_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_market_liberal_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_national_populist:0 "South Rhodesia"
+ZIM_RHO_ENG_national_populist_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_national_populist_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_paternal_autocrat:0 "South Rhodesia"
+ZIM_RHO_ENG_paternal_autocrat_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_paternal_autocrat_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_radical_socialist:0 "South Rhodesia"
+ZIM_RHO_ENG_radical_socialist_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_radical_socialist_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_social_conservative:0 "South Rhodesia"
+ZIM_RHO_ENG_social_conservative_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_social_conservative_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_social_democrat:0 "South Rhodesia"
+ZIM_RHO_ENG_social_democrat_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_social_democrat_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_social_liberal:0 "South Rhodesia"
+ZIM_RHO_ENG_social_liberal_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_social_liberal_DEF:0 "South Rhodesia"
+ZIM_RHO_ENG_radical_socialist:0 "Rhodesian Commune"
+ZIM_RHO_ENG_radical_socialist_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_radical_socialist_DEF:0 "The Rhodesian Commune"
+ZIM_RHO_ENG_syndicalist:0 "Rhodesian Commune"
+ZIM_RHO_ENG_syndicalist_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_syndicalist_DEF:0 "The Rhodesian Commune"
+ZIM_RHO_ENG_totalist:0 "Rhodesian Commune"
+ZIM_RHO_ENG_totalist_ADJ:0 "Rhodesian"
+ZIM_RHO_ENG_totalist_DEF:0 "The Rhodesian Commune"
+
 BHC_TOT_totalist:0 "Maximist Revolt"
 BHC_TOT_totalist_ADJ:0 "Maximist"
 BHC_TOT_totalist_DEF:0 "The Maximist Revolt"
