--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -535,3 +535,12 @@ SACW.44.a:0 "Great!"
 SACW.45.t:0 "South Africa Stabilises"
 SACW.45.d:0 "With the worst of times over, we can finally to claim to have full control over the country. An eery calm reigns over South Africa, and we finally stand proud and victorious. It is time to get our reforms underway, and prevent our country from descending into chaos and anarchy again."
 SACW.45.a:0 "No time to waste!"
+
+SACW.46.t:0 "The Status of Rhodesia"
+SACW.46.d:0 "South Rhodesia fought alongside the Cape and Natal against the Nationalists, but now that they have been defeated and that stability has returned to our country, we need to address the issue of their place in the South African Federation. Letting them have autonomy would please our population and still give us control over them in practice, or we could simply ask them to put down their arms and join our nation again."
+SACW.46.a:0 "The Civil War is over. Strip their autonomy."
+SACW.46.b:0 "They deserve limited autonomy."
+
+SACW.1300.t:0 "The South Rhodesian Government"
+SACW.1300.d:0 "As we are cut off from our allies in the Cape and Natal, we are forced to organise our own resistance to the Afrikaners-Nationalist regime in the Transvaal and Orange Free State.\n\nRhodesia appears once more, this time to save British influence in Africa no less. We will be up to this task."
+SACW.1300.a:0 "For Rhodesia!"
