First stab at SACW world events. Needs doublecheck later

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -456,6 +456,28 @@ worldnews.61.a:0 "Only tyrants would dare order opening fire on protesters. Tyra
 worldnews.61.b:0 "Asking soldiers to open fire on their own countrymen was very shortsighted."
 worldnews.61.c:0 "It seems the Burmese soldiers finally stood up to their reactionary government."
 
+worldnews.62.t:0 "The South African Civil War"
+worldnews.62.d:0 "One of the old colonial possessions of the British Empire, South Africa strayed away from its British allegiance during the United Kingdom's downfall just two decades ago. Where other colonies stayed in the Entente, South Africa declared the independent Union of South Africa, a state that has since been dominated by Afrikaner politicians.\n\nThe 1938 elections, however, had the pro-British Dominionists face off the pro-Republic Afrikaners in perhaps the most politically charged election in the country's history. It seems that the ballot will not be the deciding factor here however, as both sides have risen up to take on eachother."
+worldnews.62.a:0 "The stakes for those elections were high. Perhaps too high even."
+worldnews.62.b:0 "The Entente must not step a foot back in Africa. The lands we seized from them are ours."
+worldnews.62.c:0 "A victory of the Dominionists is in our direct interest. We need South Africa back."
+worldnews.62.e:0 "The Afrikaners stop deciding for South Africa now. We will safeguard the Federation!"
+worldnews.62.f:0 "The Dominionists show their true intentions. We will safeguard the Republic!"
+
+worldnews.63.t:0 "Dominionists Win in South Africa"
+worldnews.63.d:0 "The civil war that has been ravaging South Africa has been bloody and bitter, dividing across ethnicities, political ideology and ancestry. The Dominionists fought to defend the Cape, while the isolated South Rhodesia protected Salisbury with every man they had and the Afrikaners fought furiously on two fronts.\n\nAs the dust settles, the Dominionists seem to have come ahead, with the troops of Rhodesia and the Federation finally reuniting after a decisive push on Pretoria. If South Rhodesia may soon rejoin the Federation, their bravery will probably further inspire the Rhodesian people. The Federation, on the other hand, is soon looking outwards to the Entente."
+worldnews.63.a:0 "It looks like the British and the Entente are back in business in the Cape."
+worldnews.63.b:0 "This is very troublesome. We must see to protecting Vorbecksland now."
+worldnews.63.c:0 "A great victory for Africans and the Entente, now they just need to formally join."
+worldnews.63.e:0 "We can finally undo the mistakes of those two past decades with our Federation."
+
+worldnews.64.t:0 "Nationalists Win in South Africa"
+worldnews.64.d:0 "The civil war that has been ravaging South Africa has been bloody and bitter, dividing across ethnicities, political ideology and ancestry. The Dominionists fought to defend the Cape, while the isolated South Rhodesia protected Salisbury with every man they had and the Afrikaners fought furiously on two fronts.\n\nAs the dust settles, the Nationalists seem to have won, as the Vierkleur flies proudly over Salisbury and the Cape. Eventually, Rhodesia's isolation was its downfall, and the Dominionist troops could not contain the Afrikaners in their momentum. Now, it is expected for them to turn inwards, with their plans of Apartheid."
+worldnews.64.a:0 "The Afrikaners called off the Dominionists' challenge, permanently."
+worldnews.64.b:0 "Let us hope their isolation makes them less of a threat to us."
+worldnews.64.c:0 "Another opportunity missed. We need every opportunity we can get!"
+worldnews.64.e:0 "We finally rule unchallenged. It is time for the Apartheid and the Republic."
+
 ### City Fall Events ###
 
 worldnews.250.t:0 "-"
