update CNT focus tree

--- a/localisation/KR_Spain_FAI_l_english.yml
+++ b/localisation/KR_Spain_FAI_l_english.yml
@@ -1,12 +1,15 @@
 ﻿l_english:
 
+### Tooltips ###
+CNT_won_election:0 "CNT-FAI won a fair national election/n"
+
 ### Focuses ###
 CNT_election_success:0 "Election Success"
-CNT_election_success_tooltip:0 "During the Elections of 1937, Spain has seen an unprecedented surge of left-wing voters. The C.N.T. has been put in power, but Spain is still on the hinge of disaster.\n\n"
-CNT_aftermath_of_civil_war:0 "Aftermath of the Civil War"
-CNT_aftermath_of_civil_war_tooltip:0 "The Spanish Civil War was a bloody period of Spanish history. Though we have emerged victorious, it will take a long time before the country recovers.\n\n"
+CNT_election_success_desc:0 "During the Elections of 1937, Spain has seen an unprecedented surge of left-wing voters. The C.N.T. has been put in power, but Spain is still on the hinge of disaster."
+CNT_aftermath_of_civil_war:0 "Victory in the Civil War"
+CNT_aftermath_of_civil_war_desc:0 "The Spanish Civil War was a bloody period of Spanish history. Though we have emerged victorious, it will take a long time before the country recovers."
 CNT_consolidating_spain:0 "Consolidating Spain"
-CNT_consolidating_spain_tooltip:0 "Our country has been torn apart by inner conflict, and only time will tell if her new regime will be able to keep it afloat.\n\n"
+CNT_consolidating_spain_desc:0 "Our country has been torn apart by inner conflict, and only time will tell if her new regime will be able to keep it afloat."
 
 CNT_domestic_focus:0 "Mending the Rift"
 CNT_oppress_opposition:0 "Crush the Revolution's Enemies"
@@ -25,7 +28,7 @@ CNT_industry_focus_3:0 "Plan Amarillo"
 CNT_mining_focus_1:0 "Plan Sur"
 CNT_mining_focus_2:0 "Plan Oeste"
 CNT_mining_focus_3:0 "Plan Central"
-CNT_helping_hand_focus:0 "A Helping Hand Programme"
+CNT_helping_hand_focus:0 "The Effects of Black Monday"
 CNT_militia_focus:0 "Worker's Militias"
 CNT_radio_focus:0 "Receptador del Pueblo"
 CNT_radio_tooltip:0 "The "Receptador del Pueblo", or "People's Receiver", is a radio receiver produced en masse and distributed among the people freely. This has been the start of a Spanish radio culture.\n\n"
