Small fixes as per Hyv request

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3131,36 +3131,36 @@ KOR_national_populist:0 "Joseon Kingdom"
 KOR_national_populist_ADJ:0 "Joseon"
 KOR_national_populist_DEF:0 "The Joseon Kingdom"
 
-KTG_totalist:0 "State of Katanga"
-KTG_totalist_ADJ:0 "Katanga"
-KTG_totalist_DEF:0 "State of Katanga"
-KTG_syndicalist:0 "State of Katanga"
+KTG_totalist:0 "Bayeke Commune"
+KTG_totalist_ADJ:0 "Bayeke"
+KTG_totalist_DEF:0 "Bayeke Commune"
+KTG_syndicalist:0 "Katanga-Bayeke Syndical Republic"
 KTG_syndicalist_ADJ:0 "Katanga"
-KTG_syndicalist_DEF:0 "State of Katanga"
-KTG_radical_socialist:0 "State of Katanga"
-KTG_radical_socialist_ADJ:0 "Katanga"
-KTG_radical_socialist_DEF:0 "State of Katanga"
-KTG_social_democrat:0 "State of Katanga"
+KTG_syndicalist_DEF:0 "Katanga-Bayeke Syndical Republic"
+KTG_radical_socialist:0 "Lubumbashi Social Republic"
+KTG_radical_socialist_ADJ:0 "Lubumbashian"
+KTG_radical_socialist_DEF:0 "Lubumbashi Social Republic"
+KTG_social_democrat:0 "Katanga"
 KTG_social_democrat_ADJ:0 "Katanga"
-KTG_social_democrat_DEF:0 "State of Katanga"
-KTG_social_liberal:0 "State of Katanga"
+KTG_social_democrat_DEF:0 "Katanga"
+KTG_social_liberal:0 "Katanga"
 KTG_social_liberal_ADJ:0 "Katanga"
-KTG_social_liberal_DEF:0 "State of Katanga"
-KTG_market_liberal:0 "State of Katanga"
+KTG_social_liberal_DEF:0 "Katanga"
+KTG_market_liberal:0 "Katanga"
 KTG_market_liberal_ADJ:0 "Katanga"
-KTG_market_liberal_DEF:0 "State of Katanga"
-KTG_social_conservative:0 "Kingdom of Katanga"
-KTG_social_conservative_ADJ:0 "Katanga"
-KTG_social_conservative_DEF:0 "Kingdom of Katanga"
-KTG_authoritarian_democrat:0 "Kingdom of Katanga"
-KTG_authoritarian_democrat_ADJ:0 "Katanga"
-KTG_authoritarian_democrat_DEF:0 "Kingdom of Katanga"
-KTG_paternal_autocrat:0 "Kingdom of Katanga"
-KTG_paternal_autocrat_ADJ:0 "Katanga"
-KTG_paternal_autocrat_DEF:0 "Kingdom of Katanga"
-KTG_national_populist:0 "Kingdom of Katanga"
-KTG_national_populist_ADJ:0 "Katanga"
-KTG_national_populist_DEF:0 "Kingdom of Katanga"
+KTG_market_liberal_DEF:0 "Katanga""
+KTG_social_conservative:0 "Garanganze"
+KTG_social_conservative_ADJ:0 "Garanganzian
+KTG_social_conservative_DEF:0 "Garanganze"
+KTG_authoritarian_democrat:0 "Garanganze"
+KTG_authoritarian_democrat_ADJ:0 "Garanganzian"
+KTG_authoritarian_democrat_DEF:0 "Garanganze"
+KTG_paternal_autocrat:0 "Garanganze"
+KTG_paternal_autocrat_ADJ:0 "Garanganzian"
+KTG_paternal_autocrat_DEF:0 "Garanganze"
+KTG_national_populist:0 "Lunda State"
+KTG_national_populist_ADJ:0 "Lunda"
+KTG_national_populist_DEF:0 "Lunda State"
 
 KUR_totalist:0 "Kurdistan"
 KUR_totalist_ADJ:0 "Kurdish"
@@ -3459,9 +3459,9 @@ LYB_social_liberal_DEF:0 "Tripolitania"
 LYB_market_liberal:0 "Tripolitania"
 LYB_market_liberal_ADJ:0 "Tripolitanian"
 LYB_market_liberal_DEF:0 "Tripolitania"
-LYB_social_conservative:0 "Libya"
-LYB_social_conservative_ADJ:0 "Libyan"
-LYB_social_conservative_DEF:0 "Libya"
+LYB_social_conservative:0 "Tripolitania"
+LYB_social_conservative_ADJ:0 "Tripolitania"
+LYB_social_conservative_DEF:0 "Tripolitania"
 LYB_authoritarian_democrat:0 "Tripolitania"
 LYB_authoritarian_democrat_ADJ:0 "Tripolitanian"
 LYB_authoritarian_democrat_DEF:0 "Tripolitania"
@@ -3799,7 +3799,7 @@ MLW_social_liberal_ADJ:0 "Nyasalander"
 MLW_social_liberal_DEF:0 "Nyasaland"
 MLW_market_liberal:0 "Nyasaland"
 MLW_market_liberal_ADJ:0 "Nyasalander"
-MLW_market_liberal_DEF:0 "The Federated States of Malawi"
+MLW_market_liberal_DEF:0  "Nyasaland"
 MLW_social_conservative:0 "Nyasaland"
 MLW_social_conservative_ADJ:0 "Nyasalander"
 MLW_social_conservative_DEF:0 "The Federation of Malawi"
